# Deployka

./: .gitignore  CMakeLists.txt  README.md
CollectArtifacts/: CMakeLists.txt  main.cpp
DeployArtifacts/: CMakeLists.txt  main.cpp
HostAgent/: CMakeLists.txt  main.cpp
NetworkLib/: CMakeLists.txt  MessageReceiver.cpp  MessageReceiver.h  ReceiveStream.cpp  ReceiveStream.h  networkLib.cpp  networkLib.h
TargetAgent/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
UtilityLib/: CMakeLists.txt  UtilityLib.cpp  UtilityLib.h
common/: DeploykaNet.h
